Don't prevent wrapping text

--- a/components/css/scrib-authority.structure.css
+++ b/components/css/scrib-authority.structure.css
@@ -62,7 +62,6 @@
 	padding: .5rem 32px .5rem .5rem;
   position: relative;
   text-decoration: none;
-  white-space: nowrap;
 
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
